@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 #CTAFCONF, GPL, etc...
 make "$@" 2>&1 | ~/.ctafconf/bin/colormake.pl
 exit ${PIPESTATUS[0]}
